 NEWS/ChangeLog for rJava
--------------------------

0.7-0	(under development)
    o	adds cross-thread communication support, currently
	used on Mac OS X to allow Java to run on a separate thread

    o	--enable-threads is now the default

[ported from 0.6-4]
    o   improve speed of reflection-based API (.jrcall and `$')
        by using native array support in rJava

    o   try to find the best match in reflection-based API
        using internal Java code (code and idea by
        Romain Francois)

    o   added with() method for jobjRef (by Romain Francois), see
        http://romainfrancois.blog.free.fr/index.php? 
        post/2009/06/17/with-semantics-for-java-objects-in-rJava

[ported from 0.6-3]
    o	support method signatures longer than 256 bytes

    o	added lib.loc parameter to .jpackage()

** 0.6-branch was created for the stable branch **

0.6-1	2008-12-23
    o	substitute $(JAVA_HOME) in configuration flags when necessary

    o	flag generated strings as UTF-8 and convert incoming strings
	into UTF-8 (see note in ?.jcall for details)
	This should improve interoperability in non-UTF-8 locales
	(most prominent example is Windows)

0.6-0	2008-09-22
    o	add support for object cache - see .jcache() - based
	on Java serialization

0.5-2	(never released, turned into 0.6-0)
    o	add direct support for raw vectors as method parameters
	(before .jarray(r) had to be used)

    o	add .jserialize() and .junserialize() functions for
	Java-serialization (do not confuse with R serialization!)

0.5-1	2007-11-05
    o	fix crashes in Windows when Java calls the vfprintf hook

    o	enhance Java environment checks, add more specific errors

    o	add support for r.arch system property which allows multi-arch
	support on platforms that don't have fat binaries (e.g. Linux)

0.5-0	2007-08-22
    o	**API CHANGE**
	The order of arguments of .jfield has been changed to match
	the order used in .jcall and the return value is as expected