@@ -1,4 +1,5 @@
 exportPattern("^\\.j")
 export(is.jnull, .r2j, .rJava.base.path)
+export(with.jobjRef)
 exportClasses(jobjRef, jarrayRef, jfloat, jlong, jbyte, jchar)
 exportMethods(show, "$", "$<-", "==", "!=")
